...
        navigationItem.hidesBackButton = true
        
        // Welcome Label
        welcomeLabel.text = "Welcome to Test Automation App"
        welcomeLabel.font = UIFont.boldSystemFont(ofSize: 20)
        welcomeLabel.textAlignment = .center
        welcomeLabel.accessibilityIdentifier = "welcome_label"
        
        // Segmented Control
        segmentedControl.selectedSegmentIndex = 0
        segmentedControl.addTarget(self, action: #selector(segmentChanged(_:)), for: .valueChanged)
        segmentedControl.accessibilityIdentifier = "home_segmented_control"
        
...
